<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText android:id="@+id/editdiaryentry_entry_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/diary_create_message"
            android:inputType="textCapSentences"/>
        <EditText android:id="@+id/editdiaryentry_entry_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/diary_create_message_supplement"
            android:inputType="textCapSentences"/>
        <EditText android:id="@+id/editdiaryentry_entry_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/diary_create_message_supplement"
            android:inputType="textCapSentences"/>
        <EditText android:id="@+id/editdiaryentry_entry_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/diary_create_message_supplement"
            android:inputType="textCapSentences"/>
        <EditText android:id="@+id/editdiaryentry_entry_text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/diary_create_message_supplement"
            android:inputType="textCapSentences"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"            >
            <Button android:id="@+id/editdiaryentry_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/diary_entry_cancel_button" />
            <Button android:id="@+id/editdiaryentry_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/diary_entry_save_button" />
            <Button android:id="@+id/editdiaryentry_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/diary_entry_delete_button" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
