...

    <string name="listen_service_description">Service for listening to TherapyGuide audio</string>
    <string name="alarm_handler_description">Receiver to handle alarms such as the diary reminder</string>
    <string name="boot_handler_description">Receiver to handle recreation of the diary reminder on device boot</string>

    <string name="listen_tab_name">Sleep</string>
    <string name="diary_tab_name">Diary</string>
    <string name="kindness_tab_name">Kindness</string>

    <string name="settings">Settings</string>
    <string name="show_intro">How to use this app</string>
    <string name="show_about">About Tiffany Armitage</string>

...
    <string name="kindness_create_words_message">Choose a way to say something kind to someone today</string>
    <string name="kindness_create_thoughts_message">Choose a way to think something kind about someone today</string>
    <string name="kindness_create_actions_message">Choose a way to do something nice for someone today</string>
    <string name="kindness_create_self_message">Choose a way to be kind to yourself today</string>

    <string name="missing_entry_error_toast_text">Cannot find Entry</string>
    <string name="dialog_delete_entry">Are you sure you want to delete this entry?</string>
    <string name="ok_delete_entry">OK</string>
    <string name="cancel_delete_entry">Cancel</string>

    <string name="dialog_kindness_reminder">Would you like to pick a way to be kind today?</string>
    <string name="ok_kindness_reminder">Yes, be kind</string>
    <string name="cancel_kindness_reminder">Maybe Later</string>

    <string name="empty_diary_entry_error_toast_text">You should enter 5 things</string>
...
