<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/diary_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:paddingTop="@dimen/cardview_top_padding"
        android:paddingBottom="@dimen/cardview_top_padding" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_create_black_24dp"
        android:tint="@color/colourPositivityAccent"
        android:backgroundTint="@color/colourPositivityDark"
        app:backgroundTint="@color/colourPositivityDark"
        app:borderWidth="0dp"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>